# Cryptocompanion

./: .gitignore  CMakeLists.txt  CryptoCompanion.pro  README.md  adddialog.cpp  adddialog.h  addresswidget.cpp  addresswidget.cpp.autosave  addresswidget.h  adressbook.cpp  adressbook.h  backup.cpp  backup.h  changepassworddialog.cpp  changepassworddialog.h  cryptocompanion.cpp  cryptocompanion.h  cryptocompanion.ui  cryptocurrency.cpp  cryptocurrency.h  cryptography.cpp  cryptography.h  input.txt  logindialog.cpp  logindialog.h  main.cpp  newaddresstab.cpp  newaddresstab.h  newwallettab.cpp  newwallettab.h  recovery.cpp  recovery.h  registerdialog.cpp  registerdialog.h  secdialog.cpp  secdialog.h  secdialog.n  secdialog.ui  simplecrypt.cpp  simplecrypt.h  (+10 more)
